# Rust-Kafka-MHTP

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
kafka_output.parquet/: part-0.parquet
output/: part-0.parquet
src/: lib.rs
src/common/: consumer.rs  mod.rs  types.rs
src/merger/: README.md  consumer.rs  logic.rs  main.rs  mod.rs  producer.rs
src/producer/: main.rs  schema_register.rs
src/saver/: batch_converter.rs  main.rs
trino/: docker-compose.yml
trino/config/catalog/: hive.properties
trino/config/grafana/data/dashboards/: dashboard.json
trino/config/grafana/provisioning/datasources/: datasource.yaml
trino/config/grafana/provisioning/plugins/: plugin.yaml
trino/config/hive/: hive-site.xml
