[package]
name = "Rust-Kafka-MHT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/producer/main.rs"

[[bin]]
name = "merger"
path = "src/merger/main.rs"

[[bin]]
name = "saver"
path = "src/saver/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kafka = "0.10.0"
rand = "0.8.5"
chrono = { version = "0.4.39", features = ["serde"] }
