[package]
name = "Rust-Kafka-MHT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/producer/main.rs"

[[bin]]
name = "merger"
path = "src/merger/main.rs"

[[bin]]
name = "saver"
path = "src/saver/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kafka = "0.10.0"
rand = "0.8.5"
chrono = { version = "0.4.39", features = ["serde"] }
bincode = "1.3.3"
datafusion = "44.0.0"
datafusion-objectstore-s3 = "=0.2.1"
aws-types = "0.9.0"
aws-credential-types = "1.2.1"
aws-sdk-s3 = "0.9.0"
http = "0.2.6"
url = "2.5.4"
datafusion-data-access = { version = "8.0.0" }
object_store = { version = "0.11.2", features = ["aws", "serde", "serde_json"] }
log = "0.4.25"
env_logger = "0.11.6"
serde_avro_derive = "0.3.1"
serde-avro = "0.5.0"
schema_registry_converter = { version = "4.2.0", features = ["avro", "blocking"] }
